# Dirtbox

./: CMakeLists.txt  LICENSE  README.md
include/: camera.h  files.h  game.h  header.h  interface.h  map.h  perlin.h  player.h  texture.h
source/: camera.c  camera.h  game.c  game.h  header.h  interface.c  inventory.c  inventory.h  main.c  map.c  map.h  perlin.c  perlin.h  player.c  player.h  quad.c  quad.h  texture.c  world.c  world.h
